--- a/Curso-1-Introduccion-Data-Science/pandas/ejercicios.ipynb
+++ b/Curso-1-Introduccion-Data-Science/pandas/ejercicios.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 102,
    "id": "6991ae3c",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 103,
    "id": "2c1d5682",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 104,
    "id": "6b8db27a",
    "metadata": {},
    "outputs": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 105,
    "id": "d26a6cc9",
    "metadata": {},
    "outputs": [
@@ -219,7 +219,7 @@
        "max      6.000000  512.329200  "
       ]
      },
-     "execution_count": 93,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 106,
    "id": "3a1b15ce",
    "metadata": {},
    "outputs": [
@@ -252,7 +252,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 107,
    "id": "003fba90",
    "metadata": {},
    "outputs": [
@@ -273,7 +273,7 @@
        "(891, 12)"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 108,
    "id": "78faf042",
    "metadata": {},
    "outputs": [
@@ -294,7 +294,7 @@
        "10692"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 109,
    "id": "c8fc6cc9",
    "metadata": {},
    "outputs": [
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 110,
    "id": "e2994d13",
    "metadata": {},
    "outputs": [
@@ -369,7 +369,7 @@
        "Name: Survived, dtype: float64"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 111,
    "id": "31ad9158",
    "metadata": {},
    "outputs": [
@@ -413,7 +413,7 @@
        "Name: Survived, dtype: float64"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -423,6 +423,18 @@
     "labels = [\"Niños\", \"Adolescentes\", \"Jovenes\", \"Adultos\", \"Adultos Mayores\", \"Ancianos\"]\n",
     "df[\"Grupos por edad\"] = pd.cut(df[\"Age\"], bins=bins, labels=labels)\n",
     "df.groupby(\"Grupos por edad\")[\"Survived\"].mean() * 100"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4f4df6ae",
+   "metadata": {},
+   "source": [
+    "## 💼 Clase social y dinero\n",
+    "* ¿Qué clase tuvo mayor tasa de supervivencia (1ra, 2da, 3ra)?\n",
+    "* ¿El precio del boleto (Fare) se relaciona con sobrevivir?\n",
+    "* ¿Las personas que pagaron boletos caros sobrevivieron más?\n",
+    "* ¿La media del precio del boleto es diferente entre sobrevivientes y no sobrevivientes?"
    ]
   }
  ],
